Batch classroom member creations
