# src/main/java/tech/sangdang/lmscoreapi/modules/management/api/ClassroomMemberController.java
@@ -8,7 +8,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import tech.sangdang.lmscoreapi.generated.api.ClassroomMembersApi;
 import tech.sangdang.lmscoreapi.generated.model.ClassroomMemberFilter;
-import tech.sangdang.lmscoreapi.generated.model.CreateClassroomMemberCommand;
+import tech.sangdang.lmscoreapi.generated.model.CreateClassroomMembersCommand;
 import tech.sangdang.lmscoreapi.modules.management.app.ClassroomMemberService;
 
 @RestController
@@ -18,13 +18,13 @@ public class ClassroomMemberController implements ClassroomMembersApi {
   private final ClassroomMemberService classroomMemberService;
 
   @Override
-  public ResponseEntity<?> createClassroomMember(
+  public ResponseEntity<?> createClassroomMembers(
       @NonNull UUID classroomId,
-      @NonNull CreateClassroomMemberCommand createClassroomMemberCommand) {
+      @NonNull CreateClassroomMembersCommand createClassroomMembersCommand) {
     return ResponseEntity.status(HttpStatus.CREATED)
         .body(
-            classroomMemberService.createClassroomMember(
-                classroomId, createClassroomMemberCommand));
+            classroomMemberService.createClassroomMembers(
+                classroomId, createClassroomMembersCommand));
   }
 
   @Override
